// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusLabel alignment when alignment prop set to "end" should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "hsl(109, 28%, 92%)",
        "borderRadius": 16,
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "flexWrap": "nowrap",
        "gap": 4,
        "justifyContent": "flex-end",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "flexShrink": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      maxFontSizeMultiplier={1.1428571428571428}
      selectable={true}
      selectionColor="hsl(86, 100%, 46%)"
      style={
        [
          {
            "fontFamily": "inter-medium",
          },
          {
            "color": "hsl(197, 15%, 43%)",
          },
          {
            "textAlign": "right",
          },
          {
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      End Aligned
    </Text>
  </View>
  <View />
  <View
    style={
      [
        undefined,
        {
          "backgroundColor": "hsl(107, 58%, 33%)",
        },
      ]
    }
    testID="successLabelIcon"
  />
</View>
`;

exports[`StatusLabel alignment when alignment prop set to default ("start") should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "hsl(109, 28%, 92%)",
        "borderRadius": 16,
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "flexWrap": "nowrap",
        "gap": 4,
        "justifyContent": "flex-end",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "flexShrink": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      maxFontSizeMultiplier={1.1428571428571428}
      selectable={true}
      selectionColor="hsl(86, 100%, 46%)"
      style={
        [
          {
            "fontFamily": "inter-medium",
          },
          {
            "color": "hsl(197, 15%, 43%)",
          },
          {
            "textAlign": "right",
          },
          {
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      Start Aligned
    </Text>
  </View>
  <View />
  <View
    style={
      [
        undefined,
        {
          "backgroundColor": "hsl(107, 58%, 33%)",
        },
      ]
    }
    testID="successLabelIcon"
  />
</View>
`;

exports[`StatusLabel status when status prop set to "critical" should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "hsl(109, 28%, 92%)",
        "borderRadius": 16,
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "flexWrap": "nowrap",
        "gap": 4,
        "justifyContent": "flex-end",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "flexShrink": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      maxFontSizeMultiplier={1.1428571428571428}
      selectable={true}
      selectionColor="hsl(86, 100%, 46%)"
      style={
        [
          {
            "fontFamily": "inter-medium",
          },
          {
            "color": "hsl(197, 15%, 43%)",
          },
          {
            "textAlign": "right",
          },
          {
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      Critical
    </Text>
  </View>
  <View />
  <View
    style={
      [
        undefined,
        {
          "backgroundColor": "hsl(6, 64%, 51%)",
        },
      ]
    }
    testID="criticalLabelIcon"
  />
</View>
`;

exports[`StatusLabel status when status prop set to "inactive" should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "hsl(109, 28%, 92%)",
        "borderRadius": 16,
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "flexWrap": "nowrap",
        "gap": 4,
        "justifyContent": "flex-end",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "flexShrink": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      maxFontSizeMultiplier={1.1428571428571428}
      selectable={true}
      selectionColor="hsl(86, 100%, 46%)"
      style={
        [
          {
            "fontFamily": "inter-medium",
          },
          {
            "color": "hsl(197, 15%, 43%)",
          },
          {
            "textAlign": "right",
          },
          {
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      Inactive
    </Text>
  </View>
  <View />
  <View
    style={
      [
        undefined,
        {
          "backgroundColor": "hsl(198, 25%, 33%)",
        },
      ]
    }
    testID="inactiveLabelIcon"
  />
</View>
`;

exports[`StatusLabel status when status prop set to "informative" should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "hsl(109, 28%, 92%)",
        "borderRadius": 16,
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "flexWrap": "nowrap",
        "gap": 4,
        "justifyContent": "flex-end",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "flexShrink": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      maxFontSizeMultiplier={1.1428571428571428}
      selectable={true}
      selectionColor="hsl(86, 100%, 46%)"
      style={
        [
          {
            "fontFamily": "inter-medium",
          },
          {
            "color": "hsl(197, 15%, 43%)",
          },
          {
            "textAlign": "right",
          },
          {
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      Informative
    </Text>
  </View>
  <View />
  <View
    style={
      [
        undefined,
        {
          "backgroundColor": "hsl(207, 79%, 57%)",
        },
      ]
    }
    testID="informativeLabelIcon"
  />
</View>
`;

exports[`StatusLabel status when status prop set to "warning" should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "hsl(109, 28%, 92%)",
        "borderRadius": 16,
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "flexWrap": "nowrap",
        "gap": 4,
        "justifyContent": "flex-end",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "flexShrink": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      maxFontSizeMultiplier={1.1428571428571428}
      selectable={true}
      selectionColor="hsl(86, 100%, 46%)"
      style={
        [
          {
            "fontFamily": "inter-medium",
          },
          {
            "color": "hsl(197, 15%, 43%)",
          },
          {
            "textAlign": "right",
          },
          {
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      Warning
    </Text>
  </View>
  <View />
  <View
    style={
      [
        undefined,
        {
          "backgroundColor": "hsl(51, 64%, 49%)",
        },
      ]
    }
    testID="warningLabelIcon"
  />
</View>
`;

exports[`StatusLabel status when status prop set to default ("success") should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "hsl(109, 28%, 92%)",
        "borderRadius": 16,
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "flexWrap": "nowrap",
        "gap": 4,
        "justifyContent": "flex-end",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "flexShrink": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      maxFontSizeMultiplier={1.1428571428571428}
      selectable={true}
      selectionColor="hsl(86, 100%, 46%)"
      style={
        [
          {
            "fontFamily": "inter-medium",
          },
          {
            "color": "hsl(197, 15%, 43%)",
          },
          {
            "textAlign": "right",
          },
          {
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      Success
    </Text>
  </View>
  <View />
  <View
    style={
      [
        undefined,
        {
          "backgroundColor": "hsl(107, 58%, 33%)",
        },
      ]
    }
    testID="successLabelIcon"
  />
</View>
`;
